[gd_scene load_steps=20 format=3 uid="uid://d4fe48l2la7q4"]

[ext_resource type="Script" path="res://scripts/Character.gd" id="1_vvc6c"]
[ext_resource type="Script" path="res://addons/virtual_joystick/virtual_joystick.gd" id="2_djxna"]
[ext_resource type="Texture2D" uid="uid://bm30au8mjfc2f" path="res://addons/virtual_joystick/textures/joystick_base_outline.png" id="3_u7s0n"]
[ext_resource type="Texture2D" uid="uid://dt13r06u87fib" path="res://addons/virtual_joystick/textures/joystick_tip_arrows.png" id="4_1fxik"]
[ext_resource type="Texture2D" uid="uid://dyb5duilp42dk" path="res://assets/Mobile-Controls/UI/UI_Circle_Bevel_Base.png" id="5_gmt43"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="6_gco1r"]
[ext_resource type="Script" path="res://states/standing.gd" id="7_551i0"]
[ext_resource type="Script" path="res://states/crouching.gd" id="8_tykwr"]
[ext_resource type="Script" path="res://states/proning.gd" id="9_4gs62"]
[ext_resource type="Script" path="res://states/prone_crouch.gd" id="10_t5tvw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nwh1x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bqsdm"]
albedo_color = Color(0.631428, 0.0978918, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_stm7g"]
material = SubResource("StandardMaterial3D_bqsdm")

[sub_resource type="CircleShape2D" id="CircleShape2D_a2wg5"]
radius = 500.0

[sub_resource type="Animation" id="Animation_n2m2p"]
resource_name = "CROUCHING"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/Camera3D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D/MeshInstance3D:mesh:height")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}

[sub_resource type="Animation" id="Animation_f1usf"]
resource_name = "CrouchProne"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.75, 0), Vector3(0, 0.25, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D/MeshInstance3D:mesh:height")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/Camera3D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, -0.22, 0)]
}

[sub_resource type="Animation" id="Animation_wypav"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("head/Camera3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D/MeshInstance3D:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_48ycb"]
resource_name = "StandProne"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D/MeshInstance3D:mesh:height")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.25, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("head/Camera3D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, -0.22, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wna7o"]
_data = {
"CROUCHING": SubResource("Animation_n2m2p"),
"CrouchProne": SubResource("Animation_f1usf"),
"RESET": SubResource("Animation_wypav"),
"StandProne": SubResource("Animation_48ycb")
}

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("animation_player")]
script = ExtResource("1_vvc6c")
animation_player = NodePath("AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_nwh1x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_stm7g")
skeleton = NodePath("../..")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.51472, -0.0438347)

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Test" type="Node2D" parent="Control"]

[node name="UI" type="CanvasLayer" parent="Control/Test"]

[node name="Virtual joystick left" type="Control" parent="Control/Test/UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -369.0
offset_right = 378.0
offset_bottom = -8.0
grow_vertical = 0
script = ExtResource("2_djxna")

[node name="Base" type="TextureRect" parent="Control/Test/UI/Virtual joystick left"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
mouse_force_pass_scroll_events = false
texture = ExtResource("3_u7s0n")
stretch_mode = 5

[node name="Tip" type="TextureRect" parent="Control/Test/UI/Virtual joystick left/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("4_1fxik")
stretch_mode = 5

[node name="buttons" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -155.0
offset_bottom = 191.0
grow_horizontal = 0
grow_vertical = 2

[node name="jump" type="TouchScreenButton" parent="Control/buttons"]
position = Vector2(172, 3)
scale = Vector2(0.0859375, 0.0917969)
texture_normal = ExtResource("5_gmt43")
shape = SubResource("CircleShape2D_a2wg5")

[node name="run" type="TouchScreenButton" parent="Control/buttons"]
position = Vector2(58, 4)
scale = Vector2(0.0859375, 0.0917969)
texture_normal = ExtResource("5_gmt43")
shape = SubResource("CircleShape2D_a2wg5")

[node name="crouch" type="TouchScreenButton" parent="Control/buttons"]
position = Vector2(3, 115)
scale = Vector2(0.0859375, 0.0917969)
texture_normal = ExtResource("5_gmt43")
shape = SubResource("CircleShape2D_a2wg5")

[node name="prone" type="TouchScreenButton" parent="Control/buttons"]
position = Vector2(125, 116)
scale = Vector2(0.0859375, 0.0917969)
texture_normal = ExtResource("5_gmt43")
shape = SubResource("CircleShape2D_a2wg5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wna7o")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_gco1r")

[node name="Standing" type="Node" parent="StateMachine"]
script = ExtResource("7_551i0")

[node name="Crouching" type="Node" parent="StateMachine"]
script = ExtResource("8_tykwr")

[node name="Proning" type="Node" parent="StateMachine"]
script = ExtResource("9_4gs62")

[node name="ProneCrouch" type="Node" parent="StateMachine"]
script = ExtResource("10_t5tvw")

[connection signal="pressed" from="Control/buttons/jump" to="." method="_on_jump_pressed"]
[connection signal="pressed" from="Control/buttons/run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="Control/buttons/crouch" to="StateMachine/Standing" method="_on_crouch_pressed"]
[connection signal="pressed" from="Control/buttons/crouch" to="StateMachine/Crouching" method="_on_crouch_pressed"]
[connection signal="pressed" from="Control/buttons/crouch" to="StateMachine/Proning" method="_on_crouch_pressed"]
[connection signal="pressed" from="Control/buttons/crouch" to="StateMachine/ProneCrouch" method="_on_crouch_pressed"]
[connection signal="pressed" from="Control/buttons/prone" to="StateMachine/Standing" method="_on_prone_pressed"]
[connection signal="pressed" from="Control/buttons/prone" to="StateMachine/Crouching" method="_on_prone_pressed"]
[connection signal="pressed" from="Control/buttons/prone" to="StateMachine/Proning" method="_on_prone_pressed"]
[connection signal="pressed" from="Control/buttons/prone" to="StateMachine/ProneCrouch" method="_on_prone_pressed"]
